Default value for Lab editbox has been changed to 'Test results' from 'Blood test'

--- a/console/views/scenario.jade
+++ b/console/views/scenario.jade
@@ -63,7 +63,7 @@ html(lang='en')
 											br
 											input(name='doctdatakey_b' + service.id type='text' id='doctdatkey_b' + service.id class='doctinputkey_b' + service.id placeholder='Prescription'  style='margin-left:20px')
 										else if (service.id == 7)
-											input(name='labdatakey' + service.id type='text' id='labdatkey' + service.id class='labinputkey' + service.id placeholder='Blood sugar'  style='margin-left:20px')
+											input(name='labdatakey' + service.id type='text' id='labdatkey' + service.id class='labinputkey' + service.id placeholder='Test results'  style='margin-left:20px')
 										else if (service.id == 8)
 											input(name='patientdatakey' + service.id type='text' id='patientdatkey' + service.id class='patinputkey' + service.id placeholder='Name'  style='margin-left:20px')
 										hr(style='width: 100%; color: #e0e0e0; height: 1px; background-color:#e0e0e0; margin-bottom:1px')
