--- a/console/views/index.jade
+++ b/console/views/index.jade
@@ -11,7 +11,7 @@ block content
 				a(href='/client' class = 'btn btn-info custom_margin') Client
 				a(href='/service_list' class = 'btn btn-info custom_margin') Services
 				a(href='/scenario_list' class = 'btn btn-info custom_margin') Scenarios
-				a(href='/' class = 'btn btn-info custom_margin') Interactions
+				//- a(href='/' class = 'btn btn-info custom_margin') Interactions
 
 	div(class = 'navbar navbar-default navbar-fixed-bottom')
 		div(class = 'container')
