--- a/console/views/nav.jade
+++ b/console/views/nav.jade
@@ -16,4 +16,4 @@ div(class = 'navbar navbar-inverse navbar-static-top')
 				li
 					a(href = '/scenario_list') Scenarios
 				li
-					a(href = '/') Interaction
+					//- a(href = '/') Interaction
