--- a/console/views/scenario_list.jade
+++ b/console/views/scenario_list.jade
@@ -7,6 +7,8 @@ block content
 		div(class='panel panel-default text-center')
 			h2 Scenario List
 		div(class='panel panel-default')
+			div(class="panel-head text-center")
+				h3 Applications
 			div(class='panel-body')
 				div(class='row')
 					div(class='col-md-2')
@@ -16,10 +18,29 @@ block content
 					div(class='col-md-6')
 						h4 Description
 				for s in scenario_list
-						div(class='row top-buffer')
-							div(class='col-md-2')
-								a(class='btn btn-primary', href='./scenario?scenario_id=' + s.id + '&scenario_name=' + s.name, role='button') Launch
-							div(class='col-md-4')
-								div=s.name
-							div(class='col-md-6')
-								div=s.description
+					div(class='row top-buffer')
+						div(class='col-md-2')
+							a(class='btn btn-primary', href='./scenario?scenario_id=' + s.id + '&scenario_name=' + s.name, role='button') Launch
+						div(class='col-md-4')
+							div=s.name
+						div(class='col-md-6')
+							div=s.description
+		div(class='panel panel-default')
+			div(class="panel-head text-center")
+				h3 Data Dissemination Models
+			div(class='panel-body')
+				div(class='row')
+					div(class='col-md-2')
+						h4 Action
+					div(class='col-md-4')
+						h4 Scenario
+					div(class='col-md-6')
+						h4 Description
+				for s in model_list
+					div(class='row top-buffer')
+						div(class='col-md-2')
+							a(class='btn btn-primary', href='./scenario?model_id=' + s.id + '&model_name=' + s.name, role='button') Launch
+						div(class='col-md-4')
+							div=s.name
+						div(class='col-md-6')
+							div=s.description
